src/test/deca/syntax/valid/custom/print/inst_int_print.deca
// Description:
//   Print a integer.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   int i = 1;
   print(i);
}
