src/test/deca/syntax/invalid/custom/decl_into_if.deca
// Description:
//    declaration of a variable into a if
//
// Resultats:
//    ligne 11 : Error, no viable alternative at input 'i'
//
// Historique:
//    cree le 11/01/2022

{
    if(true){
    int i =1;
    }
}